@@ -16,6 +16,7 @@ setGeneric("adjustRtime", function(object, param, ...)
 setGeneric("adjustedRtime", function(object, ...) standardGeneric("adjustedRtime"))
 setGeneric("adjustedRtime<-", function(object, value)
     standardGeneric("adjustedRtime<-"))
+setGeneric("align", function(x, y, ...) standardGeneric("align"))
 setGeneric("ampTh", function(object, ...) standardGeneric("ampTh"))
 setGeneric("ampTh<-", function(object, value) standardGeneric("ampTh<-"))
 setGeneric("AutoLockMass", function(object) standardGeneric("AutoLockMass"))
